--- a/Allfiles/Mod12/Labfiles/01_ElectricStore_begin/ElectricStore/Views/ShoppingCart/Index.cshtml
+++ b/Allfiles/Mod12/Labfiles/01_ElectricStore_begin/ElectricStore/Views/ShoppingCart/Index.cshtml
@@ -44,6 +44,7 @@ else
         <p>and select the wanted products.</p>
     </div>
 }
+<button type="button" id="btnChat" class="btn btn-success" onclick="location.href='@Url.Action("Chat", "ShoppingCart")'">Chat with Online Visitors</button>
 
 
 
